--- a/style.css
+++ b/style.css
@@ -894,3 +894,28 @@ font-family:Arial,'Times New Roman', Times, serif;}
   margin-right: 100px !important;
 }
 
+.salir { 
+width: 70px;
+height: 50px;
+border-radius: 35px;
+background-color: rgb(255, 30, 30);
+font-size: 1.7rem;
+margin-left: 1rem;
+color: white;
+text-decoration: none;  
+}
+
+
+
+.salir:hover { 
+  border-style: solid;
+  border-color: rgb(251, 255, 0);
+  width: 72px;
+  height: 52px;
+  border-radius: 20px;
+  background-color: rgb(255, 30, 30);
+  font-size: 1.7rem;
+  margin-left: 1rem;
+  color: white;
+  text-decoration: none;  
+  }
