--- a/styleslogin.css
+++ b/styleslogin.css
@@ -65,8 +65,15 @@ input[type="submit"]:active {
     }
 }
 
-.olvidar_contra { 
-    margin-top: 10px;
-    padding-left: 130px;
+#error-text {
+    color: rgb(241, 68, 68);
+    font-size: 15px;
+}
 
+.olvidar_contra {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 17px;
+    color: cornflowerblue;
 }
