--- a/style.css
+++ b/style.css
@@ -491,32 +491,27 @@ background: white;
   }
 
   .form_clientes .botons {
-
-   
+    display: block;
     width: 250px;
     background: #f7b707fb;
     border: none;
     padding: 12px;
     color: black;
-    margin: 16px 0;
     font-size: 16px;
     border-style: solid;
     border-radius: 30px;
-
+    margin: 16px auto;
   }
   .form_clientes .botons:hover {
-
-   
     width: 260px;
     background: rgba(247, 187, 20, 0.877);
     border: none;
     padding: 12px;
     color: rgb(0, 0, 0);
-    margin: 16px 0;
+    margin: 16px auto;
     font-size: 16px;
     border-style: solid;
-    border-radius: px;
-
+    border-radius: 30px;
   }
 
 
@@ -881,16 +876,6 @@ font-family:Arial,'Times New Roman', Times, serif;}
   width: 20px;
   height: 300px;
   border-style:ridge
-}
-
-.ayu { 
-  margin-left: 100px !important;
-  margin-right: 100px !important;
-}
-
-.ayu2 { 
-  margin-left: 100px !important;
-  margin-right: 100px !important;
 }
 
 .salir { 
